dark design with colored hover

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,16 @@
     <meta name="theme-color" content="#1976d2" />
   </head>
   <body>
-    <h1>Liste des meilleures recommendations de films, séries, livres, etc</h1>
-    <p>
-      Nouveauté : SalleZen.com est désormais une Progressive Web App, vous
-      pouvez l'installer comme une app avec Chrome en cliquant sur option,
-      Installer
-    </p>
+    <div class="header">
+      <h1>
+        Liste des meilleures recommendations de films, séries, livres, etc
+      </h1>
+      <p>
+        Nouveauté : SalleZen.com est désormais une Progressive Web App, vous
+        pouvez l'installer comme une app avec Chrome en cliquant sur option,
+        Installer
+      </p>
+    </div>
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
